--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -28,9 +28,11 @@
     "eslint-plugin-react-app": "^6.2.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.3.4",
+    "firebase": "^9.23.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.14.0",
+    "recoil": "^0.7.7",
     "typescript": "^5.1.3",
     "vite": "^4.3.9",
     "vite-plugin-eslint": "^1.8.1",
