--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -4,7 +4,7 @@
   "main": "serverless.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "yarn serverless offline"
+    "start": "yarn serverless offline --reloadHandler"
   },
   "engines": {
     "node": ">=16.14.2"
@@ -12,7 +12,8 @@
   "dependencies": {
     "@middy/core": "^4.5.3",
     "@middy/http-json-body-parser": "^4.5.3",
-    "http-errors": "^2.0.0"
+    "http-errors": "^2.0.0",
+    "mongoose": "^7.3.1"
   },
   "devDependencies": {
     "@serverless/typescript": "^3.30.1",
@@ -21,6 +22,7 @@
     "@types/node": "^20.3.3",
     "esbuild": "^0.18.11",
     "serverless": "^3.33.0",
+    "serverless-dotenv-plugin": "^6.0.0",
     "serverless-esbuild": "^1.45.1",
     "serverless-offline": "^12.0.4",
     "ts-node": "^10.9.1",
