--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -14,7 +14,8 @@
     "@middy/http-json-body-parser": "^4.5.3",
     "firebase-admin": "^11.10.0",
     "http-errors": "^2.0.0",
-    "mongoose": "^7.3.1"
+    "mongoose": "^7.3.1",
+    "yup": "^1.2.0"
   },
   "devDependencies": {
     "@serverless/typescript": "^3.30.1",
