feat (backend): add create user api

--- a/packages/backend/tsconfig.paths.json
+++ b/packages/backend/tsconfig.paths.json
@@ -4,7 +4,10 @@
     "paths": {
       "@function/*": ["src/function/*"],
       "@lib/*": ["src/lib/*"],
-      "@middleware/*": ["src/middleware/*"]
+      "@middleware/*": ["src/middleware/*"],
+      "@service/*": ["src/service/*"],
+      "@model/*": ["src/model/*"],
+      "@validation/*": ["src/validation/*"]
     }
   }
 }
