--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -14,12 +14,14 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.13.6",
+    "@types/lodash-es": "^4.17.8",
     "@types/navermaps": "^3.6.5",
     "@types/react": "^18.0.37",
     "@types/react-dom": "^18.0.11",
     "@typescript-eslint/eslint-plugin": "^5.59.0",
     "@typescript-eslint/parser": "^5.59.0",
     "@vitejs/plugin-react": "^4.0.0",
+    "axios": "^1.4.0",
     "babel-plugin-direct-import": "^1.0.0",
     "eslint": "^8.38.0",
     "eslint-config-prettier": "^8.8.0",
@@ -29,11 +31,14 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.3.4",
     "firebase": "^9.23.0",
+    "lodash-es": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-error-boundary": "^4.0.10",
+    "react-hook-form": "^7.45.2",
     "react-router-dom": "^6.14.0",
     "recoil": "^0.7.7",
-    "typescript": "^5.1.3",
+    "typescript": "^5.1.6",
     "vite": "^4.3.9",
     "vite-plugin-eslint": "^1.8.1",
     "vite-tsconfig-paths": "^4.2.0"
