--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -12,8 +12,10 @@
   "dependencies": {
     "@middy/core": "^4.5.3",
     "@middy/http-json-body-parser": "^4.5.3",
+    "axios": "^1.5.0",
     "firebase-admin": "^11.10.0",
     "http-errors": "^2.0.0",
+    "lodash": "^4.17.21",
     "mongoose": "^7.3.1",
     "yup": "^1.2.0"
   },
