--- a/packages/backend/tsconfig.paths.json
+++ b/packages/backend/tsconfig.paths.json
@@ -1,13 +1,7 @@
 {
   "compilerOptions": {
-    "baseUrl": ".",
     "paths": {
-      "@function/*": ["src/function/*"],
-      "@lib/*": ["src/lib/*"],
-      "@middleware/*": ["src/middleware/*"],
-      "@service/*": ["src/service/*"],
-      "@model/*": ["src/model/*"],
-      "@validation/*": ["src/validation/*"]
+      "@src/*": ["./src/*"]
     }
   }
 }
