--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -1,38 +1,68 @@
 {
   "name": "backend",
-  "version": "1.0.0",
-  "main": "serverless.ts",
+  "version": "0.0.1",
+  "description": "",
+  "author": "",
+  "private": true,
+  "license": "UNLICENSED",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "yarn serverless offline --reloadHandler"
-  },
-  "engines": {
-    "node": ">=16.14.2"
+    "build": "nest build",
+    "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
+    "start": "nest start",
+    "start:dev": "nest start --watch",
+    "start:debug": "nest start --debug --watch",
+    "start:prod": "node dist/main",
+    "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:cov": "jest --coverage",
+    "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
+    "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
-    "@middy/core": "^4.5.3",
-    "@middy/http-json-body-parser": "^4.5.3",
-    "axios": "^1.5.0",
-    "firebase-admin": "^11.10.0",
-    "http-errors": "^2.0.0",
-    "lodash": "^4.17.21",
-    "mongoose": "^7.3.1",
-    "yup": "^1.2.0"
+    "@nestjs/common": "^10.0.0",
+    "@nestjs/config": "^3.1.1",
+    "@nestjs/core": "^10.0.0",
+    "@nestjs/platform-express": "^10.0.0",
+    "reflect-metadata": "^0.1.13",
+    "rxjs": "^7.8.1"
   },
   "devDependencies": {
-    "@serverless/typescript": "^3.30.1",
-    "@types/aws-lambda": "^8.10.119",
-    "@types/http-errors": "^2.0.1",
-    "@types/node": "^20.3.3",
-    "esbuild": "^0.18.11",
-    "serverless": "^3.33.0",
-    "serverless-dotenv-plugin": "^6.0.0",
-    "serverless-esbuild": "^1.45.1",
-    "serverless-offline": "^12.0.4",
+    "@nestjs/cli": "^10.0.0",
+    "@nestjs/schematics": "^10.0.0",
+    "@nestjs/testing": "^10.0.0",
+    "@types/express": "^4.17.17",
+    "@types/jest": "^29.5.2",
+    "@types/node": "^20.3.1",
+    "@types/supertest": "^2.0.12",
+    "jest": "^29.5.0",
+    "prettier": "^3.0.0",
+    "source-map-support": "^0.5.21",
+    "supertest": "^6.3.3",
+    "ts-jest": "^29.1.0",
+    "ts-loader": "^9.4.3",
     "ts-node": "^10.9.1",
     "tsconfig-paths": "^4.2.0",
-    "typescript": "^5.1.6"
+    "typescript": "^5.1.3"
   },
-  "author": "soohyun cho <a101201031@gmail.com>",
-  "license": "MIT"
+  "jest": {
+    "moduleFileExtensions": [
+      "js",
+      "json",
+      "ts"
+    ],
+    "rootDir": "src",
+    "testRegex": ".*\\.spec\\.ts$",
+    "transform": {
+      "^.+\\.(t|j)s$": "ts-jest"
+    },
+    "collectCoverageFrom": [
+      "**/*.(t|j)s"
+    ],
+    "coverageDirectory": "../coverage",
+    "testEnvironment": "node",
+    "moduleNameMapper": {
+      "^@src/(.*)$": "<rootDir>/$1"
+    }
+  }
 }
